Fix margins in detailed view on mobile

--- a/style/_file-list-details.sass
+++ b/style/_file-list-details.sass
@@ -72,6 +72,8 @@
         padding-bottom: $table-side-padding * 0.6 !important
         padding-right: $table-side-padding * 0.5 !important
         font-size: 1.3em
+        @media screen and (max-width: $mobile-breakpoint)
+          font-size: 1.05em
 
       &:hover
         background-color: $bg-light
